@@ -2,6 +2,7 @@ Changes since wmaker 0.64.0:
 ............................
 
 - made programmatic scroller changes send notifications
+- replaced WMSetBoxExpandsToParent with WMSetViewExpands...
 
 changes since wmaker 0.63.1:
 ............................
